_includes/K8s/examples/pod-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-pvc
  namespace: jmcf
spec:
  volumes:
    - name: logs
      persistentVolumeClaim:
        claimName: pvclaim-t1
  containers:
    - name: app-container
      image: alpine
      command: ["/bin/sh"]
      args: ["-c", "while true; do date >> /var/log/app.txt; sleep 5; done"]
      volumeMounts:
        - name: logs
          mountPath: /var/log
