_includes/K8s/examples/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ex1
  name: my-service-cip
  namespace: jmcf
spec:
  ports:
  - name: 8080-80
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: ex1
  type: ClusterIP
