_includes/K8s/examples/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: jmcf
spec:
  podSelector:
    matchLabels:
      app: ex1
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          project: ckad
    - podSelector:
        matchLabels:
          role: test
    ports:
    - protocol: TCP
      port: 80
